--- a/index.html
+++ b/index.html
@@ -7,6 +7,6 @@
     <link rel="stylesheet" src="dist/css/style.min.css">
 </head>
 <body>
-    <center><h1>TTP PORTAL</h1></center>
+    <center><h1>TTP PORTAL UPDATED</h1></center>
 </body>
 </html>
