--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" src="dist/css/style.min.css">
 </head>
 <body>
-    <center><h1>TTP PORTAL UPDATED</h1></center>
+    <center><h1>TTP PORTAL UPDATED!</h1></center>
     <Script src="./animations.js"></Script>
 </body>
 </html>
