--- a/index.html
+++ b/index.html
@@ -8,6 +8,6 @@
 </head>
 <body>
     <center><h1>TTP PORTAL UPDATED!</h1></center>
-    <Script src="./animations.js"></Script>
+    <Script src="dist/js/animations.min.js"></Script>
 </body>
 </html>
