--- a/index.html
+++ b/index.html
@@ -4,9 +4,10 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link rel="stylesheet" src="dist/css/style.min.css">
+    <link rel="stylesheet" href="dist/css/style.min.css" type="text/css">
 </head>
 <body>
     <center><h1>TTP PORTAL UPDATED! JS</h1></center>
+    <script src="dist/js/scripts.min.js"></script>
 </body>
 </html>
