--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="dist/css/style.min.css" type="text/css">
 </head>
 <body>
-    <center><h1>TTP PORTAL UPDATED! JS</h1></center>
+    <center><h1>TTP PORTAL UPDATED! JS!!</h1></center>
     <script src="dist/js/scripts.min.js"></script>
 </body>
 </html>
