--- a/index.html
+++ b/index.html
@@ -4,9 +4,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link rel="stylesheet" src="dist/css/calendar.min.css">
+    <link rel="stylesheet" src="dist/calendar.min.css">
 </head>
 <body>
-    <center><h1>TTP PORTAL UPDATED! calendar</h1></center>
+    <center><h1>TTP PORTAL UPDATED! CALENDAR</h1></center>
 </body>
 </html>
