--- a/index.html
+++ b/index.html
@@ -7,6 +7,6 @@
     <link rel="stylesheet" href="dist/css/style.css">
 </head>
 <body>
-    <center><h1>TTP PORTAL UPDATED! CALENDAR++</h1></center>
+    <center><h1>TTP PORTAL UPDATED! CALENDAR+</h1></center>
 </body>
 </html>
