--- a/index.html
+++ b/index.html
@@ -8,6 +8,6 @@
 
 </head>
 <body>
-    <center><h1>TTP PORTAL UPDATED! CALENDAR()</h1></center>
+    <center><h1>TTP PORTAL UPDATED! CALENDAR)</h1></center>
 </body>
 </html>
