--- a/index.html
+++ b/index.html
@@ -4,10 +4,10 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link rel="stylesheet" href="/dist/css/style.min.css">
+    <link rel="stylesheet" href="./dist/css/style.min.css">
 
 </head>
 <body>
-    <center><h1>TTP PORTAL UPDATED! CALENDAR</h1></center>
+    <h1>TTP PORTAL UPDATED!</h1>
 </body>
 </html>
