--- a/index.html
+++ b/index.html
@@ -7,6 +7,6 @@
     <link rel="stylesheet" href="/css/style.min.css">
 </head>
 <body>
-    <h1>TTP PORTAL UPDATED::</h1>
+    <h1>TTP PORTAL UPDATED:</h1>
 </body>
 </html>
